tests/abnormal/abnormal.exp
Error ------------------------------------------------------------------------------- conditional_break_continue.js:61:8

Cannot cast `a` to number because possibly uninitialized variable [1] is incompatible with number [2].

   conditional_break_continue.js:61:8
   61|     ; (a: number) // error
              ^

References:
   conditional_break_continue.js:55:9
   55|     let a
               ^ [1]
   conditional_break_continue.js:61:11
   61|     ; (a: number) // error
                 ^^^^^^ [2]


Error ------------------------------------------------------------------------------- conditional_break_continue.js:73:8

Cannot cast `a` to number because possibly uninitialized variable [1] is incompatible with number [2].

   conditional_break_continue.js:73:8
   73|     ; (a: number) // error
              ^

References:
   conditional_break_continue.js:67:9
   67|     let a
               ^ [1]
   conditional_break_continue.js:73:11
   73|     ; (a: number) // error
                 ^^^^^^ [2]


Error ------------------------------------------------------------------------------- conditional_break_continue.js:85:8

Cannot cast `a` to number because possibly uninitialized variable [1] is incompatible with number [2].

   conditional_break_continue.js:85:8
   85|     ; (a: number) // error
              ^

References:
   conditional_break_continue.js:79:9
   79|     let a
               ^ [1]
   conditional_break_continue.js:85:11
   85|     ; (a: number) // error
                 ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- toplevel_break.js:3:1

Illegal break statement

   3| break; // error, illegal
      ^^^^^^


Error ----------------------------------------------------------------------------------------- toplevel_continue.js:3:1

Illegal continue statement

   3| continue; // error, illegal
      ^^^^^^^^^


Error ------------------------------------------------------------------------------------------- toplevel_return.js:3:1

Illegal return statement

   3| return; // error, illegal
      ^^^^^^



Found 6 errors
